Add support for SSL

--- a/SimpleWebSockerServer.Console.Server/SimpleWebSockerServer.Console.Server.csproj
+++ b/SimpleWebSockerServer.Console.Server/SimpleWebSockerServer.Console.Server.csproj
@@ -45,15 +45,27 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Resources\HostSimulator.p12" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SimpleWebSocketServer\SimpleWebSocketServer.Lib.csproj">
       <Project>{15a31eff-427c-4334-a3fe-e1d479ecb5a0}</Project>
       <Name>SimpleWebSocketServer.Lib</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
