--- a/SimpleWebSocketServer/SimpleWebSocketServer.Lib.csproj
+++ b/SimpleWebSocketServer/SimpleWebSocketServer.Lib.csproj
@@ -9,4 +9,8 @@
     <None Remove="nugetPackagePush.cmd" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="5.4.0" />
+  </ItemGroup>
+
 </Project>
